--- a/index.html
+++ b/index.html
@@ -1,52 +1,41 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title>ZBD</title>
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, maximum-scale=1"
-    />
-    <meta charset="utf-8" />
-    <meta name="description" content="ZBDevelopment" />
-    <meta name="keywords" content="ZBDevelopment,0xberkay,ZBD" />
+<!doctype html>
+<html lang="en">
 
-    <script src="https://unpkg.com/vue@next"></script>
-    <style>
+<head>
+  <meta charset="UTF-8" />
+  <link rel="apple-touch-icon" sizes="57x57" href="assets/icon/apple-icon-57x57.png">
+  <link rel="apple-touch-icon" sizes="60x60" href="assets/icon/apple-icon-60x60.png">
+  <link rel="apple-touch-icon" sizes="72x72" href="assets/icon/apple-icon-72x72.png">
+  <link rel="apple-touch-icon" sizes="76x76" href="assets/icon/apple-icon-76x76.png">
+  <link rel="apple-touch-icon" sizes="114x114" href="assets/icon/apple-icon-114x114.png">
+  <link rel="apple-touch-icon" sizes="120x120" href="assets/icon/apple-icon-120x120.png">
+  <link rel="apple-touch-icon" sizes="144x144" href="assets/icon/apple-icon-144x144.png">
+  <link rel="apple-touch-icon" sizes="152x152" href="assets/icon/apple-icon-152x152.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="assets/icon/apple-icon-180x180.png">
+  <link rel="icon" type="image/png" sizes="192x192" href="assets/icon/android-icon-192x192.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="assets/icon/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="96x96" href="assets/icon/favicon-96x96.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="assets/icon/favicon-16x16.png">
+  <link rel="manifest" href="assets/icon/manifest.json">
+  <meta name="msapplication-TileColor" content="#ffffff">
+  <meta name="msapplication-TileImage" content="assets/icon/ms-icon-144x144.png">
+  <meta name="theme-color" content="#ffffff">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="ZBD - 0xberkay" />
+  <meta name="keywords" content="ZBDevelopment,0xberkay,ZBD" />
+  <title>ZBD</title>
+</head>
 
-      body {
-        padding: 10;
-        background-image: url("/bird.png");
-        background-repeat: no-repeat;
-        background-position: 0 50%;
-        background-color: transparent;
-        animation: bird-fly 20s linear infinite;
-      }
+<body>
+  <nav>
+    <h2>ZBD</h2>
+    <ul>
+      <li><a href="mailto:me@zbd.com">Contact</a></li>
+    </ul>
+  </nav>
 
-      @keyframes bird-fly {
-        from {
-          background-position: 0 50%;
-        }
-        to {
-          background-position: 100% 50%;
-        }
-      }
-    </style>
-  </head>
-  <body>
-    <div id="app">
-      <header>
-      </header>
-    </div>
-    <script>
-      const app = Vue.createApp({
-        data() {
-          return {
-            title: "ZBD",
-          };
-        },
-      });
+  <canvas id="bg"></canvas>
+  <script type="module" src="/main.js"></script>
+</body>
 
-      app.mount("#app");
-    </script>
-  </body>
 </html>
