--- a/index.html
+++ b/index.html
@@ -40,4 +40,8 @@
   <script type="module" src="/main.js"></script>
 </body>
 
+<footer>
+  <a href="https://github.com/0xberkay/zbd" target="_blank">0xberkay</a>
+</footer>
+
 </html>
