modified:   index.html

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <h2>ZBD</h2>
     </ul>
     <ul>
-      <li><a href="mailto:me@zbd.com">Contact</a></li>
+      <li><a href="mailto:me@zbd.com.tr">Contact</a></li>
     </ul>
   </nav>
 
