modified:   index.html 	modified:   main.js 	modified:   style.css

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <link rel="apple-touch-icon" sizes="144x144" href="assets/icons/apple-icon-144x144.png">
   <link rel="apple-touch-icon" sizes="152x152" href="assets/icons/apple-icon-152x152.png">
   <link rel="apple-touch-icon" sizes="180x180" href="assets/icons/apple-icon-180x180.png">
-  <link rel="icon" type="image/png" sizes="192x192"  href="assets/icons/android-icon-192x192.png">
+  <link rel="icon" type="image/png" sizes="192x192" href="assets/icons/android-icon-192x192.png">
   <link rel="icon" type="image/png" sizes="32x32" href="assets/icons/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="96x96" href="assets/icons/favicon-96x96.png">
   <link rel="icon" type="image/png" sizes="16x16" href="assets/icons/favicon-16x16.png">
@@ -28,12 +28,8 @@
 
 <body>
   <nav>
-    <ul>
-      <h2>ZBD</h2>
-    </ul>
-    <ul>
-      <li><a href="mailto:me@zbd.com.tr">Contact</a></li>
-    </ul>
+    <h2>ZBD</h2>
+    <a href="mailto:me@zbd.com.tr">Contact</a>
   </nav>
 
   <canvas id="bg"></canvas>
