modified:   assets/icons/manifest.json 	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -22,7 +22,11 @@
   <meta name="theme-color" content="#ffffff">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="ZBD - 0xberkay" />
-  <meta name="keywords" content="ZBDevelopment,0xberkay,ZBD" />
+  <meta property="og:image" content="assets/icons/android-icon-192x192.png" />
+  <meta name="author" content="Zübeyir Berkay Küçük" />
+  <meta name="robots" content="index,follow" />
+
+  <meta name="keywords" content="ZBDevelopment,0xberkay,ZBD,Zübeyir Berkay Küçük,zbd.com.tr,zbd.com" />
   <title>ZBD</title>
 </head>
 
