--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 </body>
 
 <footer>
-  <a href="https://github.com/0xberkay/zbd" target="_blank">0xberkay</a>
+  <a href="https://github.com/0xberkay" target="_blank">0xberkay</a>
 </footer>
 
 </html>
